--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: ruby
 rvm:
 - 2.1
 
+branches:
+  except:
+  - legacy
+
 before_script:
  - chmod +x ./script/cibuild # or do this locally and commit
 
