--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: ruby
 rvm:
 - 2.1
 
-before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
-
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script:
+ - bundle exec jekyll build
 
 env:
   global:
@@ -24,4 +20,4 @@ deploy:
   bucket: developer.bombbomb.com
   skip_cleanup: true
   acl: public_read
-  local_dir: ./script/cibuild/_site
+  local_dir: _site
