travis tweakin', some spam

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_username: bombbomb
 # Build settings
 markdown: kramdown
 theme: minima
-
-api_spec_url: https://local.api.bombbomb.com/v2/spec
 exclude: [vendor]
+
+# Site settings
+api_spec_url: https://local.api.bombbomb.com/v2/spec
