uninstalled the maps stuff added libs page

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BombBomb Developer
 email: support@bombbomb.com
 url: https://www.bombbomb.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Add the power of video into your platform with BombBomb's API and Libraries"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
