--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BombBomb Developer
 email: support@bombbomb.com
 url: https://www.bombbomb.com
-description: "Add the power of video into your platform with BombBomb's API and Libraries"
+description: "Face-to-face communication on your platform with BombBomb"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
