--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,3 +2,7 @@
   title: Android Developer
   github: BigNateBombBomb
   twitter: TheRealLDPX
+- name: Tom Harrington
+  title: iOS Developer
+  github: atomicbird
+  twitter: atomicbird
